--- a/projets.html
+++ b/projets.html
@@ -21,12 +21,8 @@
             </nav>
         </header>
         <main>
-            <h2>Bienvenue sur mon site personnel!</h1>
-            <p>Je m'appelle Baptiste, j'ai 35 ans j'habite en France du côté de Clermont-Ferrand.</p>
-            <p>Comme beaucoup de Français, j'ai récemment eu l'obligation de rester confiné chez moi.</p>
-            <p>J'ai choisi de transformer ce désagrément en opportunité en commençant à suivre des formations en ligne pour apprendre le développement Web.</p>
-            <p>L'apprentissage seul sans sujet d'application me paraissant peu approprié, j'ai décidé de créer mon propre site internet.</p>
-            <p>Je vous souhaite une bonne visite!</p>
+            <h2>Mes projets</h1>
+            <p>loret ipsum</p>
         </main>
         <footer>
             
