--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <p>Comme beaucoup de Français, j'ai récemment eu l'obligation de rester confiné chez moi.</p>
             <p>J'ai choisi de transformer ce désagrément en opportunité en commençant à suivre des formations en ligne pour apprendre le développement Web.</p>
             <p>L'apprentissage seul sans sujet d'application me paraissant peu approprié, j'ai décidé de créer mon propre site internet.</p>
+            <p>Je commence par la base, un site statique en html/php, et je l'améliorerais au fur et à mesure de mon apprentissage.</p>
             <p>Je vous souhaite une bonne visite!</p>
         </main>
         <footer>
