--- a/projets.html
+++ b/projets.html
@@ -19,7 +19,14 @@
                     <div class="menu"><a href="employeurs.html"> Employeurs </a></div>
                 
             </nav>
+            
         </header>
+        <nav class="subnav">
+            <div class="menu">En cours</div>
+            <div class="menu">Court terme</div>
+            <div class="menu">Moyen terme</div>
+            <div class="menu">Long terme</div>
+        </nav>
         <main>
             <h2>Mes projets</h1>
             <p>loret ipsum</p>
